Feature. Add gui flag to config. Templates images add. Implement morph operations.

--- a/cfg/config.yml
+++ b/cfg/config.yml
@@ -1,12 +1,29 @@
-kernel_shape: MORPH_CROSS
+#ideal
+#original
+#smooth
+puncture_tpl_file: smooth
+
+gui: True
+trace: True
+
+#MORPH_RECT = 0
+#MORPH_CROSS = 1
+#MORPH_ELLIPSE = 2
+kernel_shape: 1
 kernel_size: 17
 
-match_method: CV_TM_SQDIFF_NORMED
+#TM_SQDIFF = 0
+#TM_SQDIFF_NORMED = 1
+#TM_CCORR = 2
+#TM_CCORR_NORMED = 3
+#TM_CCOEFF = 4
+#TM_CCOEFF_NORMED = 5
+match_method: 3
 
 center_fill_size: 6
 
 hough_threshold: 50
-probabilistic: false
+probabilistic: False
 
 groups_min_distance: 5
 max_gab_tolerance: 100
